:bug: Allow whitespaces in a header

--- a/src/_includes/stylesheets/layout.css
+++ b/src/_includes/stylesheets/layout.css
@@ -118,7 +118,6 @@ h1, h2, h3, h4, h5, h6 {
   margin-block-start: 1.618034em; /* φ */
   margin-block-end: 1em;
 
-  display: flex;
   inline-size: fit-content; /* Get Webkit outlines fit */
 }
 
